Fixed the background image issues on all pages. Now correcting the spacing matter on the homepage

--- a/creamyCajunStuffedSalmon.css
+++ b/creamyCajunStuffedSalmon.css
@@ -1,10 +1,9 @@
-html,
-body {
-    height: 100%;
+html{
+    min-height: 100%;
 }
 
 body {
-    background: url(https://images.unsplash.com/photo-1516676839530-135a545cce02?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1073&q=80) fixed;
+    background: url(https://images.unsplash.com/photo-1531315630201-bb15abeb1653?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80) fixed;
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
