--- a/elkBurgers.css
+++ b/elkBurgers.css
@@ -1,12 +1,15 @@
-html,
-body {
-    height: 100%;
+html {
+    min-height: 100%;
 }
 
 body {
-    background-image: url(https://images.unsplash.com/photo-1614853035986-b230d7d5679c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80);
+    background: url(https://images.unsplash.com/photo-1614853035986-b230d7d5679c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80) fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
     margin-left: 7em;
     margin-right: 7em;
+    
 }
 
 h1 {
